--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Portfolio</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="bg-white ">
+<body>
   <!-- Navbar -->
   <nav class="flex justify-between absolute top-0 left-0 w-full px-16 py-10 z-30">
     <div class="flex justify-normal w-1/3 space-x-8">
@@ -44,12 +45,14 @@
   </nav>
 
   <!-- Hero Section -->
-  <div class="flex flex-col">
-    <video autoplay loop muted playsinline class="w-full h-auto mb-[-176px] z-0">
-      <source src="media/homepage_bg.mp4" type="video/mp4">
-      您的浏览器不支持 HTML5 视频。
-    </video>
-    <div class="flex justify-center space-x-[72px] bg-white/0">
+  <div>
+    <div class="mb-[-176px] z-0">
+      <video autoplay loop muted playsinline style="mix-blend-mode: darken;">
+        <source src="media/homepage_bg.mp4">
+      </video>
+    </div>
+    <!-- <img src="media/homepage_bg.jpg" class="w-full h-auto mb-[-176px] z-0">-->
+    <div class="flex justify-center space-x-[72px]">
       <a href="#works">
         <button
           class="z-30 group flex items-center justify-center w-[340px] h-[96px] rounded-full border border-black/20 hover:bg-black hover:text-white hover:border-0 relative">
@@ -64,10 +67,12 @@
         <p class="text-[32px] text-white">My Resume</p>
       </button>
     </div>
+    <div class="h-[80px]">
+    </div>
   </div>
 
   <!-- Works Section -->
-  <section id="works" class="pt-[80px] flex bg-[#F5FAFD]">
+  <section id="works" class="flex bg-[#F5FAFD]">
     <!-- byme -->
     <div class="w-1/2 h-auto bg-[#F5FAFD] pt-[12px] pb-[6px] pl-[12px] pr-[6px] relative">
       <a href="byme.html">
