--- a/index.html
+++ b/index.html
@@ -7,11 +7,19 @@
   <title>My Portfolio</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="style.css">
+  <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+/>
 </head>
 
 <body>
+    <!-- Loading Screen -->
+    <div id="loading-screen">
+      <div class="loader"></div>
+    </div>
   <!-- Navbar -->
-  <nav class="flex justify-between absolute top-0 left-0 w-full px-16 py-10 z-30">
+  <nav class="flex justify-between absolute top-0 left-0 w-full px-16 py-10 z-30 animate__fadeIn">
     <div class="flex justify-normal w-1/3 space-x-8">
       <a href="#works"
         class="flex justify-center w-[144px] h-16 justify-normal text-xl rounded-full border border-black/20 text-black hover:bg-black hover:text-white hover:border-0 transition-all duration-300 ease-in-out"><button>✏️
@@ -46,13 +54,13 @@
 
   <!-- Hero Section -->
   <div>
-    <div class="mb-[-176px] z-0">
+    <div class="mb-[-176px] z-0 animate__animated animate__fadeIn">
       <video autoplay loop muted playsinline style="mix-blend-mode: darken;">
-        <source src="media/homepage_bg.mp4">
+        <source src="media/homepage_bg.webm">
       </video>
     </div>
     <!-- <img src="media/homepage_bg.jpg" class="w-full h-auto mb-[-176px] z-0">-->
-    <div class="flex justify-center space-x-[72px]">
+    <div class="flex justify-center space-x-[72px] animate__animated animate__fadeInUp">
       <a href="#works">
         <button
           class="z-30 group flex items-center justify-center w-[340px] h-[96px] rounded-full border border-black/20 hover:bg-black hover:text-white hover:border-0 relative">
@@ -63,7 +71,7 @@
             class="absolute right-[36px] hidden group-hover:block transition-opacity duration-300">
         </button>
       </a>
-      <button class="flex items-center justify-center w-[340px] h-[96px] rounded-full resume-button z-30">
+      <button class="animate__animated animate__pulse animate__infinite flex items-center justify-center w-[340px] h-[96px] rounded-full resume-button z-30">
         <p class="text-[32px] text-white">My Resume</p>
       </button>
     </div>
@@ -271,6 +279,15 @@
       background-image: url('media/resume_hover.png');
     }
   </style>
+
+  <!-- 加载动画 -->
+  <script>
+    window.addEventListener('load', function () {
+      const loadingScreen = document.getElementById('loading-screen');
+      loadingScreen.style.display = 'none';
+    });
+  </script>
+  
 </body>
 
 </html>
