--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
-<body>
+<body class="bg-[#F5FAFD]">
   <!-- Loading Screen -->
   <div id="loading-screen">
     <div class="loader"></div>
   </div>
   <!-- Navbar -->
   <div class="hidden-below-sm">
-    <nav class="flex justify-between absolute top-0 left-0 w-full px-16 py-10 z-30 animate__fadeIn">
+    <nav class="flex justify-between absolute top-0 left-0 w-full px-16 py-10 z-30 animate__animated animate__fadeInDown">
       <div class="flex justify-normal w-1/3 space-x-8">
         <a href="#works"
           class="flex justify-center w-[144px] h-16 justify-normal text-xl rounded-full border border-black/20 text-black hover:bg-black hover:text-white hover:border-0 transition-all duration-300 ease-in-out"><button>✏️
@@ -27,11 +27,8 @@
       </div>
       <div class="flex justify-center w-1/3 h-auto">
         <a href="#works" class="relative block h-[64px] w-[280px]">
-          <div class="h-full bg-cover bg-center transition-all duration-1000 ease-in-out transform hover:animate-rotate"
-            style="background-image: url('media/homepage_island_start.png'); 
-                        background-size: cover;"
-            onmouseover="this.style.backgroundImage='url(media/homepage_island_hello.png)'"
-            onmouseout="this.style.backgroundImage='url(media/homepage_island_start.png)'">
+          <div class="h-full bg-cover bg-center transition-all duration-500 ease-in-out transform hover:scale-110">
+            <img src="media/homepage_island_start.png">
           </div>
         </a>
       </div>
@@ -51,11 +48,12 @@
 
   <!-- Hero Section -->
   <div>
-    <div class="z-0 animate__animated animate__fadeIn">
-      <video autoplay loop muted playsinline style="mix-blend-mode: darken;">
+    <div class="z-0 animate__animated animate__zoomIn">
+      <video class="w-full h-auto" autoplay loop muted playsinline style="mix-blend-mode: darken;">
         <source src="media/homepage_bg.webm">
       </video>
     </div>
+
     <!-- <img src="media/homepage_bg.jpg" class="w-full h-auto mb-[-176px] z-0">-->
     <div class="hidden-below-sm">
       <div class="flex justify-center mt-[-176px] space-x-[72px] animate__animated animate__fadeInUp">
@@ -83,122 +81,146 @@
   <div class="hidden-below-sm">
     <section id="works" class="flex bg-[#F5FAFD]">
       <!-- byme -->
-      <div class="w-1/2 h-auto bg-[#F5FAFD] pt-[12px] pb-[6px] pl-[12px] pr-[6px] relative hover:-translate-y-[8px] ease-in-out transition-all">
-        <a href="byme.html">
-          <img class="rounded-[48px] hover:brightness-110 ease-in-out duration-300" src="media/cover_byme.png">
-        </a>
-        <div class="absolute top-[52px] left-[52px] text-[28px] flex justify-normal space-x-[8px]">
-          <img src="media/logo_byme.png">
-          <p class="font-semibold">Byme</p>
-        </div>
-        <p class="absolute top-[104px] left-[52px] text-[18px] text-black/60">心动来电，陌生社交新体验。</p>
-        <div class="group">
-          <img class="absolute top-[12px] right-[6px]" src="media/corner.png">
+      <div class="w-1/2 h-auto perspective-1600">
+        <div
+          class="bg-[#F5FAFD] pt-[12px] pb-[6px] pl-[12px] pr-[6px] relative hover:rotate-y-[5deg] ease-in-out transform duration-300 transition-all">
           <a href="byme.html">
-            <img class="absolute top-[12px] right-[6px] transition-opacity duration-300 group-hover:opacity-0"
-              src="media/arrow_02.png">
-            <img class="absolute top-[12px] right-[6px] hidden group-hover:block transition-opacity duration-300"
-              src="media/arrow_02_hover.png">
+            <img class="w-full h-auto rounded-[48px] hover:brightness-110 ease-in-out duration-300"
+              src="media/cover_byme.png">
           </a>
+          <div class="absolute top-[52px] left-[52px] text-[28px] flex justify-normal space-x-[8px]">
+            <img src="media/logo_byme.png">
+            <p class="font-semibold">Byme</p>
+          </div>
+          <p class="absolute top-[104px] left-[52px] text-[18px] text-black/60">心动来电，陌生社交新体验。</p>
+          <div class="group">
+            <img class="absolute top-[11px] right-[5px]" src="media/corner.png">
+            <a href="byme.html">
+              <img class="absolute top-[12px] right-[6px] transition-opacity duration-300 group-hover:opacity-0"
+                src="media/arrow_02.png">
+              <img class="absolute top-[12px] right-[6px] hidden group-hover:block transition-opacity duration-300"
+                src="media/arrow_02_hover.png">
+            </a>
+          </div>
         </div>
       </div>
       <!-- qume -->
-      <div class="w-1/2 h-auto bg-[#F5FAFD] pt-[12px] pb-[6px] pr-[12px] pl-[6px] relative hover:-translate-y-[8px] ease-in-out transition-all">
-        <a href="qume.html">
-          <img class="rounded-[48px] hover:brightness-125 ease-in-out duration-300" src="media/cover_qume.png">
-        </a>
-        <div class="absolute top-[52px] left-[52px] text-[28px] flex justify-normal space-x-[8px]">
-          <img src="media/logo_qume.png">
-          <p class="text-white font-semibold">Qume</p>
-        </div>
-        <p class="absolute top-[104px] left-[52px] text-[18px] text-white">Cue U & Me.</p>
-        <div class="group">
-          <img class="absolute top-[12px] right-[12px]" src="media/corner.png">
+      <div class="w-1/2 h-auto perspective-1600">
+        <div
+          class="bg-[#F5FAFD] pt-[12px] pb-[6px] pr-[12px] pl-[6px] relative hover:rotate-y-[-5deg] ease-in-out transform duration-300 transition-all">
           <a href="qume.html">
-            <img class="absolute top-[12px] right-[12px] transition-opacity duration-300 group-hover:opacity-0"
-              src="media/arrow_02.png">
-            <img class="absolute top-[12px] right-[12px] hidden group-hover:block transition-opacity duration-300"
-              src="media/arrow_02_hover.png">
+            <img class="w-full h-auto rounded-[48px] hover:brightness-125 ease-in-out duration-300"
+              src="media/cover_qume.png">
           </a>
+          <div class="absolute top-[52px] left-[52px] text-[28px] flex justify-normal space-x-[8px]">
+            <img src="media/logo_qume.png">
+            <p class="text-white font-semibold">Qume</p>
+          </div>
+          <p class="absolute top-[104px] left-[52px] text-[18px] text-white">Cue U & Me.</p>
+          <div class="group">
+            <img class="absolute top-[11px] right-[11px]" src="media/corner.png">
+            <a href="qume.html">
+              <img class="absolute top-[12px] right-[12px] transition-opacity duration-300 group-hover:opacity-0"
+                src="media/arrow_02.png">
+              <img class="absolute top-[12px] right-[12px] hidden group-hover:block transition-opacity duration-300"
+                src="media/arrow_02_hover.png">
+            </a>
+          </div>
         </div>
       </div>
     </section>
     <section class="flex bg-[#F5FAFD]">
       <!-- gafalib -->
-      <div class="w-1/2 h-auto bg-[#F5FAFD] pt-[6px] pb-[6px] pl-[12px] pr-[6px] relative hover:-translate-y-[8px] ease-in-out transition-all">
-        <a href="gafalib.html">
-          <img class="rounded-[48px] hover:brightness-125 ease-in-out duration-300" src="media/cover_gafalib.png">
-        </a>
-        <div class="absolute top-[52px] left-[52px] text-[28px] flex justify-normal space-x-[8px]">
-          <img src="media/logo_gafa.png">
-          <p class="text-white font-semibold">GAFALib</p>
-        </div>
-        <p class="absolute top-[104px] left-[52px] text-[18px] text-white">全新系统，崭新风貌。</p>
-        <div class="group">
-          <img class="absolute top-[6px] right-[6px]" src="media/corner.png">
+      <div class="w-1/2 h-auto perspective-1600">
+        <div
+          class="bg-[#F5FAFD] pt-[6px] pb-[6px] pl-[12px] pr-[6px] relative hover:rotate-y-[5deg] ease-in-out transform duration-300 transition-all">
           <a href="gafalib.html">
-            <img class="absolute top-[6px] right-[6px] transition-opacity duration-300 group-hover:opacity-0"
-              src="media/arrow_02.png">
-            <img class="absolute top-[6px] right-[6px] hidden group-hover:block transition-opacity duration-300"
-              src="media/arrow_02_hover.png">
+            <img class="w-full h-auto rounded-[48px] hover:brightness-125 ease-in-out duration-300"
+              src="media/cover_gafalib.png">
           </a>
+          <div class="absolute top-[52px] left-[52px] text-[28px] flex justify-normal space-x-[8px]">
+            <img src="media/logo_gafa.png">
+            <p class="text-white font-semibold">GAFALib</p>
+          </div>
+          <p class="absolute top-[104px] left-[52px] text-[18px] text-white">全新系统，崭新风貌。</p>
+          <div class="group">
+            <img class="absolute top-[5px] right-[5px]" src="media/corner.png">
+            <a href="gafalib.html">
+              <img class="absolute top-[6px] right-[6px] transition-opacity duration-300 group-hover:opacity-0"
+                src="media/arrow_02.png">
+              <img class="absolute top-[6px] right-[6px] hidden group-hover:block transition-opacity duration-300"
+                src="media/arrow_02_hover.png">
+            </a>
+          </div>
         </div>
       </div>
       <!-- Timespon -->
-      <div class="w-1/2 h-auto bg-[#F5FAFD] pt-[6px] pb-[6px] pr-[12px] pl-[6px] relative hover:-translate-y-[8px] ease-in-out transition-all">
-        <a href="timespon.html">
-          <img class="rounded-[48px] hover:brightness-110 ease-in-out duration-300" src="media/cover_timespon.png">
-        </a>
-        <div class="absolute top-[52px] left-[52px] text-[28px] flex justify-normal space-x-[8px]">
-          <img src="media/logo_time.png">
-          <p class="font-semibold">Timespon</p>
-        </div>
-        <p class="absolute top-[104px] left-[52px] text-[18px] text-black/60">时间就像海绵里的水。</p>
-        <div class="group">
-          <img class="absolute top-[6px] right-[12px]" src="media/corner.png">
+      <div class="w-1/2 h-auto perspective-1600">
+        <div
+          class="bg-[#F5FAFD] pt-[6px] pb-[6px] pr-[12px] pl-[6px] relative hover:rotate-y-[-5deg] ease-in-out transform duration-300 transition-all">
           <a href="timespon.html">
-            <img class="absolute top-[6px] right-[12px] transition-opacity duration-300 group-hover:opacity-0"
-              src="media/arrow_02.png">
-            <img class="absolute top-[6px] right-[12px] hidden group-hover:block transition-opacity duration-300"
-              src="media/arrow_02_hover.png">
+            <img class="w-full h-auto rounded-[48px] hover:brightness-110 ease-in-out duration-300"
+              src="media/cover_timespon.png">
           </a>
+          <div class="absolute top-[52px] left-[52px] text-[28px] flex justify-normal space-x-[8px]">
+            <img src="media/logo_time.png">
+            <p class="font-semibold">Timespon</p>
+          </div>
+          <p class="absolute top-[104px] left-[52px] text-[18px] text-black/60">时间就像海绵里的水。</p>
+          <div class="group">
+            <img class="absolute top-[6px] right-[12px]" src="media/corner.png">
+            <a href="timespon.html">
+              <img class="absolute top-[6px] right-[12px] transition-opacity duration-300 group-hover:opacity-0"
+                src="media/arrow_02.png">
+              <img class="absolute top-[6px] right-[12px] hidden group-hover:block transition-opacity duration-300"
+                src="media/arrow_02_hover.png">
+            </a>
+          </div>
         </div>
       </div>
     </section>
     <section class="flex bg-[#F5FAFD]">
       <!-- Midea -->
-      <div class="w-1/2 h-auto bg-[#F5FAFD] pt-[6px] pb-[40px] pl-[12px] pr-[6px] relative hover:-translate-y-[8px] ease-in-out transition-all">
-        <a href="super.html">
-          <img class="rounded-[48px] hover:brightness-110 ease-in-out duration-300" src="media/cover_super.png">
-        </a>
-        <div class="absolute top-[52px] left-[52px] text-[28px] flex justify-normal space-x-[8px]">
-          <img src="media/logo_midea.png">
-          <p class="text-black font-semibold">SUPER UX Model</p>
-        </div>
-        <p class="absolute top-[104px] left-[52px] text-[18px] text-black/60">美的IoT产品-用户体验度量模型</p>
-        <div class="group">
-          <img class="absolute top-[6px] right-[6px]" src="media/corner.png">
+      <div class="w-1/2 h-auto perspective-1600">
+        <div
+          class="bg-[#F5FAFD] pt-[6px] pb-[40px] pl-[12px] pr-[6px] relative hover:rotate-y-[5deg] ease-in-out transform duration-300 transition-all">
           <a href="super.html">
-            <img class="absolute top-[6px] right-[6px] transition-opacity duration-300 group-hover:opacity-0"
-              src="media/arrow_02.png">
-            <img class="absolute top-[6px] right-[6px] hidden group-hover:block transition-opacity duration-300"
-              src="media/arrow_02_hover.png">
+            <img class="w-full h-auto rounded-[48px] hover:brightness-110 ease-in-out duration-300"
+              src="media/cover_super.png">
           </a>
+          <div class="absolute top-[52px] left-[52px] text-[28px] flex justify-normal space-x-[8px]">
+            <img src="media/logo_midea.png">
+            <p class="text-black font-semibold">SUPER UX Model</p>
+          </div>
+          <p class="absolute top-[104px] left-[52px] text-[18px] text-black/60">美的IoT产品-用户体验度量模型</p>
+          <div class="group">
+            <img class="absolute top-[6px] right-[6px]" src="media/corner.png">
+            <a href="super.html">
+              <img class="absolute top-[6px] right-[6px] transition-opacity duration-300 group-hover:opacity-0"
+                src="media/arrow_02.png">
+              <img class="absolute top-[6px] right-[6px] hidden group-hover:block transition-opacity duration-300"
+                src="media/arrow_02_hover.png">
+            </a>
+          </div>
         </div>
       </div>
-      <!-- Timespon -->
-      <div class="w-1/2 h-auto bg-[#F5FAFD] pt-[6px] pb-[40px] pr-[12px] pl-[6px] relative hover:-translate-y-[8px] ease-in-out transition-all">
-        <a href="timespon.html">
-          <img class="rounded-[48px] hover:brightness-125 ease-in-out duration-300" src="media/cover_gallery.png">
-        </a>
-        <div class="group">
-          <img class="absolute top-[6px] right-[12px]" src="media/corner.png">
+      <!-- gallery -->
+      <div class="w-1/2 h-auto perspective-1600">
+        <div
+          class="bg-[#F5FAFD] pt-[6px] pb-[40px] pr-[12px] pl-[6px] relative hover:rotate-y-[-5deg] ease-in-out transform duration-300 transition-all">
           <a href="timespon.html">
-            <img class="absolute top-[6px] right-[12px] transition-opacity duration-300 group-hover:opacity-0"
-              src="media/arrow_02.png">
-            <img class="absolute top-[6px] right-[12px] hidden group-hover:block transition-opacity duration-300"
-              src="media/arrow_02_hover.png">
+            <img class="w-full h-auto rounded-[48px] hover:brightness-125 ease-in-out duration-300"
+              src="media/cover_gallery.png">
           </a>
+          <div class="group">
+            <img class="absolute top-[5px] right-[11px]" src="media/corner.png">
+            <a href="timespon.html">
+              <img class="absolute top-[6px] right-[12px] transition-opacity duration-300 group-hover:opacity-0"
+                src="media/arrow_02.png">
+              <img class="absolute top-[6px] right-[12px] hidden group-hover:block transition-opacity duration-300"
+                src="media/arrow_02_hover.png">
+            </a>
+          </div>
         </div>
       </div>
     </section>
@@ -259,40 +281,6 @@
       </div>
     </footer>
   </div>
-
-
-  <!-- 灵动岛悬停动画 -->
-  <style>
-    @keyframes rotate {
-      0% {
-        transform: rotate(0deg);
-      }
-
-      10% {
-        transform: rotate(2deg);
-      }
-
-      30% {
-        transform: rotate(-12deg);
-      }
-
-      70% {
-        transform: rotate(12deg);
-      }
-
-      90% {
-        transform: rotate(-2deg);
-      }
-
-      100% {
-        transform: rotate(0deg);
-      }
-    }
-
-    .hover\:animate-rotate:hover {
-      animation: rotate 1s cubic-bezier(0.3, 0.2, 0.2, 1.4) forwards;
-    }
-  </style>
 
   <!-- about me悬停动画 -->
   <style>
@@ -387,8 +375,8 @@
       }
     }
   </style>
-<!--鼠标-->
-<!--
+  <!--鼠标-->
+  <!--
 <style>
   body {
   cursor: url('media/cursor.png'),auto;
