--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Portfolio</title>
-  <link href="./output.css" rel="stylesheet">
+  <link href="./output.css?v=1.0" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
-<body class="bg-[#F5FAFD]">
+<body>
   <!-- Loading Screen -->
   <div id="loading-screen">
     <div class="loader"></div>
@@ -48,7 +48,7 @@
 
   <!-- Hero Section -->
   <div>
-    <div class="z-0 animate__animated animate__zoomIn">
+    <div class="z-0 animate__animated animate__fadeIn">
       <video class="w-full h-auto" autoplay loop muted playsinline style="mix-blend-mode: darken;">
         <source src="media/homepage_bg.webm">
       </video>
