--- a/byme.html
+++ b/byme.html
@@ -49,7 +49,7 @@
     </div>
   </div>
   <div>
-    <img src="media/byme/cover.png">
+    <img src="media/byme/cover.webp">
   </div>
 
   <!-- 导航 -->
@@ -71,60 +71,108 @@
     -->
   </div>
 
-<!-- 先看亮点 -->
-<div class="flex flex-wrap bg-[#F5F7FA] pl-[96px]">
-  <div data-image="media/Byme/01.png" class="openModal flex-none mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
-    <img src="media/Byme/card_01.png">
+  <!-- 先看亮点 -->
+  <div class=" bg-[#F5F7FA] px-[96px]">
+    <div class="flex">
+      <div data-image="media/Byme/01.png"
+        class="openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
+        <img src="media/Byme/card_01.png">
+      </div>
+      <div data-image="media/Byme/02.png"
+        class="openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
+        <img src="media/Byme/card_02.png">
+      </div>
+      <div data-image="media/Byme/03.png"
+        class="openModal mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
+        <img src="media/Byme/card_03.png">
+      </div>
+    </div>
+    <div class="flex">
+      <div data-image="media/Byme/04.png"
+        class="openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
+        <img src="media/Byme/card_04.png">
+      </div>
+      <div data-image="media/Byme/05.png"
+        class="openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
+        <img src="media/Byme/card_05.png">
+      </div>
+      <div class="w-[560px]">
+      </div>
+    </div>
   </div>
-  <div data-image="media/Byme/02.png" class="openModal flex-none mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
-    <img src="media/Byme/card_02.png">
+
+  
+  <!-- 再看难点 -->
+  <!-- 导航 -->
+  <div class="flex bg-[#F5F7FA] h-[180px] justify-between px-[96px]">
+    <p class="text-[48px] PF-sm pt-[64px]">再看难点。</p>
   </div>
-  <div data-image="media/Byme/03.png" class="openModal flex-none mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
-    <img src="media/Byme/card_03.png">
+  <div class=" bg-[#F5F7FA] px-[96px]">
+    <div class="flex">
+      <div data-image="media/Byme/01.png"
+        class="openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
+        <img src="media/Byme/card_01.png">
+      </div>
+      <div data-image="media/Byme/02.png"
+        class="openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
+        <img src="media/Byme/card_02.png">
+      </div>
+      <div data-image="media/Byme/03.png"
+        class="openModal mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
+        <img src="media/Byme/card_03.png">
+      </div>
+    </div>
+    <div class="flex">
+      <div data-image="media/Byme/04.png"
+        class="openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
+        <img src="media/Byme/card_04.png">
+      </div>
+      <div data-image="media/Byme/05.png"
+        class="openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
+        <img src="media/Byme/card_05.png">
+      </div>
+      <div class="w-[560px]">
+      </div>
+    </div>
   </div>
-  <div data-image="media/Byme/04.png" class="openModal flex-none mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
-    <img src="media/Byme/card_04.png">
+
+    <!-- 弹窗 -->
+  <div id="imageModal" class="modal">
+    <button id="closeModal" class="close-button"></button>
+    <img id="modalImage" src="" alt="长图">
   </div>
-  <div data-image="media/Byme/05.png" class="openModal flex-none mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
-    <img src="media/Byme/card_05.png">
-  </div>
-</div>
-<div id="imageModal" class="modal">
-  <button id="closeModal" class="close-button"></button>
-  <img id="modalImage" src="" alt="长图">
-</div>
 
 
-<script>
-  const modal = document.getElementById('imageModal');
-  const modalImage = document.getElementById('modalImage');
-  const closeModalButton = document.getElementById('closeModal');
+  <script>
+    const modal = document.getElementById('imageModal');
+    const modalImage = document.getElementById('modalImage');
+    const closeModalButton = document.getElementById('closeModal');
 
-  // 通用打开模态框函数
-  function openModal(imageSrc) {
+    // 通用打开模态框函数
+    function openModal(imageSrc) {
       modalImage.src = imageSrc;
       modal.classList.add('active');
-  }
+    }
 
-  // 为每个按钮添加点击事件
-  document.querySelectorAll('.openModal').forEach(button => {
+    // 为每个按钮添加点击事件
+    document.querySelectorAll('.openModal').forEach(button => {
       button.addEventListener('click', () => {
-          const imageSrc = button.getAttribute('data-image'); // 获取对应图片的 URL
-          openModal(imageSrc); // 打开模态框并展示图片
+        const imageSrc = button.getAttribute('data-image'); // 获取对应图片的 URL
+        openModal(imageSrc); // 打开模态框并展示图片
       });
-  });
+    });
 
-  // 点击关闭按钮和模态框外部关闭模态框
-  closeModalButton.addEventListener('click', () => {
+    // 点击关闭按钮和模态框外部关闭模态框
+    closeModalButton.addEventListener('click', () => {
       modal.classList.remove('active');
-  });
+    });
 
-  modal.addEventListener('click', (event) => {
+    modal.addEventListener('click', (event) => {
       if (event.target === modal) {
-          modal.classList.remove('active');
+        modal.classList.remove('active');
       }
-  });
-</script>
+    });
+  </script>
 
   <!-- Footer -->
   <div class="hidden-below-sm">
