--- a/byme.html
+++ b/byme.html
@@ -49,7 +49,7 @@
     </div>
   </div>
   <div>
-    <img src="media/byme/cover.webp">
+    <img class="w-full h-auto" src="https://telegraph-image-92x.pages.dev/file/e7a4256b234af4571aad1-f390e485b4432c7ff7.png">
   </div>
 
   <!-- 导航 -->
