--- a/byme.html
+++ b/byme.html
@@ -49,7 +49,8 @@
     </div>
   </div>
   <div>
-    <img class="w-full h-auto" src="https://telegraph-image-92x.pages.dev/file/e7a4256b234af4571aad1-f390e485b4432c7ff7.png">
+    <img class="w-full h-auto"
+      src="https://raw.githubusercontent.com/Zack-Zha/Zack-Zha.github.io/refs/heads/main/media/Byme/cover.png">
   </div>
 
   <!-- 导航 -->
@@ -101,7 +102,7 @@
     </div>
   </div>
 
-  
+
   <!-- 再看难点 -->
   <!-- 导航 -->
   <div class="flex bg-[#F5F7FA] h-[180px] justify-between px-[96px]">
@@ -109,34 +110,34 @@
   </div>
   <div class=" bg-[#F5F7FA] px-[96px]">
     <div class="flex">
-      <div data-image="media/Byme/01.png"
+      <div data-image="media/Byme/06.png"
         class="openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
-        <img src="media/Byme/card_01.png">
+        <img src="media/Byme/cardB_01.png">
       </div>
-      <div data-image="media/Byme/02.png"
+      <div data-image="media/Byme/07.png"
         class="openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
-        <img src="media/Byme/card_02.png">
+        <img src="media/Byme/cardB_02.png">
       </div>
-      <div data-image="media/Byme/03.png"
+      <div data-image="media/Byme/08.png"
         class="openModal mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
-        <img src="media/Byme/card_03.png">
+        <img src="media/Byme/cardB_03.png">
       </div>
     </div>
     <div class="flex">
-      <div data-image="media/Byme/04.png"
+      <div data-image="media/Byme/09.png"
         class="openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
-        <img src="media/Byme/card_04.png">
+        <img src="media/Byme/cardB_04.png">
       </div>
-      <div data-image="media/Byme/05.png"
+      <div data-image="media/Byme/10.png"
         class="openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
-        <img src="media/Byme/card_05.png">
+        <img src="media/Byme/cardB_05.png">
       </div>
       <div class="w-[560px]">
       </div>
     </div>
   </div>
 
-    <!-- 弹窗 -->
+  <!-- 弹窗 -->
   <div id="imageModal" class="modal">
     <button id="closeModal" class="close-button"></button>
     <img id="modalImage" src="" alt="长图">
@@ -174,8 +175,71 @@
     });
   </script>
 
+
+  <!-- 最后看看Byme诞生的故事 -->
+  <!-- 导航 -->
+  <div class="flex bg-[#F5F7FA] h-[180px] justify-between px-[96px]">
+    <p class="text-[48px] PF-sm pt-[64px]">最后看看Byme诞生的故事。</p>
+  </div>
+  <div class=" bg-white px-[96px] pt-[96px] flex justify-between">
+    <div>
+      <p class="text-[64px] PF-sm colorful_title">身处竞争激烈的出海社交市场，<br>
+        我们如何设计差异化的用户体验？</p>
+    </div>
+    <div>
+      <p class="text-[18px] PF-r text-[#BFBFBF]">*鉴于保密协议，我无法向您提供PPT内的详细内容。</p>
+    </div>
+  </div>
+  <div class="px-[96px] py-[56px]">
+    <p class="PF-m text-[28px] text-[#808080]">在Byme诞生之前，我们针对台湾、香港、东南亚市场开展了数次市场和用户研究。<br>
+      这些研究持续了7天左右，我主要负责数据分析、竞品分析和撰写体验报告等部分。</p>
+  </div>
+  <div class="mb-[96px] mx-[96px] flex space-x-[96px]">
+    <div class="flex w-1/3 flex-col space-y-[24px]">
+      <img src="media/byme/research1.png">
+      <p class="text-[#808080]">超过1万字的体验分析报告。从媒介进化的角度，深入分析了音视频社交产品的体验变迁。</p>
+    </div>
+    <div class="flex w-1/3 flex-col space-y-[24px]">
+      <img src="media/byme/research2.png">
+      <p class="text-[#808080]">涵盖约40款产品的竞品分析文档。我负责撰写了产品核心业务设计分析的部分。</p>
+    </div>
+    <div class="flex w-1/3 flex-col space-y-[24px]">
+      <img src="media/byme/research3.png">
+      <p class="text-[#808080]">针对公司现运营产品展开了数据分析工作。基于重点功能的数据提出了设计建议。</p>
+    </div>
+  </div>
+  <div class="bg-[#F5F7FA] pt-[96px] pb-[48px] px-[96px]">
+    <p class="w-3/4 text-[28px] PF-m text-[#808080]">根据研究结论，我设计了Byme的一级页初稿。此外，我们邀请了8位潜在用户进行访谈，并在部门内汇报与评选。最终，下述方案脱颖而出。
+    </p>
+  </div>
+  <div class="bg-[#F5F7FA] px-[96px] pb-[96px]">
+    <img src="media/Byme/idea.png">
+  </div>
+  <div class="bg-white pt-[96px] pb-[48px] px-[96px]">
+    <p class="w-3/4 text-[28px] PF-m text-[#808080]">在独立执行具体需求的过程中，我高度重视效率与质量的平衡。例如，我在流程、规范和对齐环节中做出了以下努力： </p>
+  </div>
+  <div class="mb-[96px] mx-[96px] flex space-x-[32px]">
+    <div class="flex w-1/3 flex-col space-y-[24px]">
+      <img src="media/byme/doc1.png">
+    </div>
+    <div class="flex w-1/3 flex-col space-y-[24px]">
+      <img src="media/byme/doc2.png">
+    </div>
+    <div class="flex w-1/3 flex-col space-y-[24px]">
+      <img src="media/byme/doc3.png">
+    </div>
+  </div>
+
+  <!-- Ending -->
+    <div class="bg-[#F5F7FA] text-[24px] PF-sm">
+      <div class="flex justify-center p-[40px] text-[#808080]">
+        <p>🎉感谢您看到这里！</p>
+        <a href="#works" class="text-[#1C8AFF] hover:underline ">点此浏览下一个项目。</a>
+      </div>
+    </div>
+
   <!-- Footer -->
-  <div class="hidden-below-sm">
+  <div>
     <footer class="bg-[#F5F7FA] text-[20px]">
       <div class="flex justify-between p-[40px] text-black/60">
         <p>© 2024 Zack. All rights reserved.</p>
