--- a/byme.html
+++ b/byme.html
@@ -196,15 +196,15 @@
   </div>
   <div class="mb-[96px] mx-[96px] flex space-x-[96px]">
     <div class="flex w-1/3 flex-col space-y-[24px]">
-      <img src="media/byme/research1.png">
+      <img src="https://pic1.imgdb.cn/item/678a2046d0e0a243d4f537d9.png">
       <p class="text-[#808080]">超过1万字的体验分析报告。从媒介进化的角度，深入分析了音视频社交产品的体验变迁。</p>
     </div>
     <div class="flex w-1/3 flex-col space-y-[24px]">
-      <img src="media/byme/research2.png">
+      <img src="https://pic1.imgdb.cn/item/678a2046d0e0a243d4f537da.png">
       <p class="text-[#808080]">涵盖约40款产品的竞品分析文档。我负责撰写了产品核心业务设计分析的部分。</p>
     </div>
     <div class="flex w-1/3 flex-col space-y-[24px]">
-      <img src="media/byme/research3.png">
+      <img src="https://pic1.imgdb.cn/item/678a2047d0e0a243d4f537db.png">
       <p class="text-[#808080]">针对公司现运营产品展开了数据分析工作。基于重点功能的数据提出了设计建议。</p>
     </div>
   </div>
@@ -213,20 +213,20 @@
     </p>
   </div>
   <div class="bg-[#F5F7FA] px-[96px] pb-[96px]">
-    <img src="media/Byme/idea.png">
+    <img src="https://pic1.imgdb.cn/item/678a20ccd0e0a243d4f53812.png">
   </div>
   <div class="bg-white pt-[96px] pb-[48px] px-[96px]">
     <p class="w-3/4 text-[28px] PF-m text-[#808080]">在独立执行具体需求的过程中，我高度重视效率与质量的平衡。例如，我在流程、规范和对齐环节中做出了以下努力： </p>
   </div>
   <div class="mb-[96px] mx-[96px] flex space-x-[32px]">
     <div class="flex w-1/3 flex-col space-y-[24px]">
-      <img src="media/byme/doc1.png">
+      <img src="https://pic1.imgdb.cn/item/678a20b3d0e0a243d4f537fc.png">
     </div>
     <div class="flex w-1/3 flex-col space-y-[24px]">
-      <img src="media/byme/doc2.png">
+      <img src="https://pic1.imgdb.cn/item/678a20b3d0e0a243d4f537fd.png">
     </div>
     <div class="flex w-1/3 flex-col space-y-[24px]">
-      <img src="media/byme/doc3.png">
+      <img src="https://pic1.imgdb.cn/item/678a20b4d0e0a243d4f537fe.png">
     </div>
   </div>
 
