--- a/byme.html
+++ b/byme.html
@@ -16,7 +16,7 @@
   <div>
     <nav class="flex justify-between w-full px-16 py-10 z-30 bg-[#F5F7FA]">
       <div class="flex justify-normal w-1/3 space-x-8">
-        <a href="#works"
+        <a href="index.html"
           class="flex justify-center w-[144px] h-16 justify-normal text-xl rounded-full border border-black/20 text-black hover:bg-black hover:text-white hover:border-0 transition-all duration-300 ease-in-out"><button>✏️
             WORKS</button></a>
         <a href="#projects"
@@ -242,7 +242,7 @@
   <div>
     <footer class="bg-[#F5F7FA] text-[20px]">
       <div class="flex justify-between p-[40px] text-black/60">
-        <p>© 2024 Zack. All rights reserved.</p>
+        <p>© 2025 Zack. All rights reserved.</p>
         <a href="mailto:chengkezha@gmail.com"
           class="hover:underline hover:text-black transition-all duration-300 ease-in-out">
           chengkezha@gmail.com
