--- a/byme.html
+++ b/byme.html
@@ -48,8 +48,8 @@
         从0到1设计差异化社交体验。</p>
     </div>
   </div>
-  <div>
-    <img data-image="media/byme/cover.png" class="w-full h-auto" src="media/byme/cover.png">
+  <div data-image="media/byme/cover.png">
+    <img src="media/byme/cover.png">
   </div>
 
   <!-- 导航 -->
