--- a/byme.html
+++ b/byme.html
@@ -48,8 +48,8 @@
         从0到1设计差异化社交体验。</p>
     </div>
   </div>
-  <div data-image="media/byme/cover.png">
-    <img src="media/byme/cover.png">
+  <div>
+    <img src="https://pic1.imgdb.cn/item/678a18d8d0e0a243d4f534c9.png">
   </div>
 
   <!-- 导航 -->
